--- a/PA1_Adam_Ward_122.vcxproj
+++ b/PA1_Adam_Ward_122.vcxproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FitbitData.csv" />
+    <None Include="FitbitData1.csv" />
     <None Include="Results.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
