--- a/PA1_Adam_Ward_122.vcxproj.filters
+++ b/PA1_Adam_Ward_122.vcxproj.filters
@@ -34,5 +34,8 @@
     <None Include="Results.csv">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="FitbitData1.csv">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
